--- a/src/mysql.properties
+++ b/src/mysql.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc\:mysql\://115.159.30.213\:3306/liaoyb
+url=jdbc\:mysql\://localhost\:3306/liaoyb
 username=liao
-password=liao
+password=5260liao
